[package]
name = "shelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "color"] }
directories = "5.0.1"
json = "0.12.4"
lazy_static = "1.4.0"
open = "5.0.0"
ron = "0.8.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
